[metadata]
name = reretry
version = 0.11.1
author = leshchenko1979
author_email = leshchenko1979@gmail.com
summary = An easy to use, but functional decorator for retrying on exceptions.
license = Apache License 2.0
description_file = README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/leshchenko1979/reretry
requires_python = >=3.5
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[bdist_wheel]
universal = 1
