[metadata]
name = retry2
version = 0.9.4
author = invl
author-email = andrei.suiu@gmail.com
summary = Easy to use retry decorator.
license = Apache License 2.0
description-file = README.rst
home-page = https://github.com/eSAMTrade/retry
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development

[wheel]
universal = 1
