[metadata]
name = retry-sh
version = 1.0.0
author = invl, Alexey Matveev
author-email = shizacat@yandex.ru
summary = Easy to use retry decorator.
license = Apache License 2.0
description-file = README.rst
home-page = https://github.com/shizacat/retry
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
python_requires = >=3.6
install_requires =
    decorator>=5

[wheel]
universal = 1
